--- a/GektviWpfToolkit.Tests.DataGridGK/GektviWpfToolk.Tests.DataGridGK.csproj
+++ b/GektviWpfToolkit.Tests.DataGridGK/GektviWpfToolk.Tests.DataGridGK.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="WPF-UI" Version="2.0.3" />
+    <PackageReference Include="WPF-UI" Version="3.0.0-preview.4" />
   </ItemGroup>
 
   <ItemGroup>
