--- a/GeKtviWpfToolkit/GeKtviWpfToolkit.csproj
+++ b/GeKtviWpfToolkit/GeKtviWpfToolkit.csproj
@@ -6,14 +6,14 @@
     <Nullable>disable</Nullable>
     <UseWPF>true</UseWPF>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>0.0.4</Version>
+    <Version>0.0.5</Version>
     <Title>GeKtviWpfToolkit</Title>
     <Description>Extended WPF controls and some reuse classes</Description>
     <RepositoryUrl>https://github.com/GeKtvi/GeKtviWpfToolkit</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Reactive" Version="6.0.0"/>
     <PackageReference Include="WPF-UI" Version="2.1.0" />
-  </ItemGroup>
-
+  </ItemGroup> 
 </Project>
