--- a/Gektvi.Toolkit.Wpf.Tests/Gektvi.Toolkit.Wpf.Tests.csproj
+++ b/Gektvi.Toolkit.Wpf.Tests/Gektvi.Toolkit.Wpf.Tests.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="WPF-UI" Version="2.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GeKtvi.Toolkit\GeKtvi.Toolkit.csproj" />
+  </ItemGroup>
+
 </Project>
