--- a/GeKtvi.Toolkit/GeKtvi.Toolkit.csproj
+++ b/GeKtvi.Toolkit/GeKtvi.Toolkit.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <UseWPF>true</UseWPF>
+    <Title>GeKtvi.Toolkit</Title>
   </PropertyGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="System.Reactive" Version="6.0.0" />
+  </ItemGroup>
 </Project>
