--- a/Gektvi.Toolkit.Wpf.Tests/Gektvi.Toolkit.Wpf.Tests.csproj
+++ b/Gektvi.Toolkit.Wpf.Tests/Gektvi.Toolkit.Wpf.Tests.csproj
@@ -1,19 +1,23 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
-    <StartupObject>GektviWpfToolkit.Tests.DataGridGK.App</StartupObject>
+
+    <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="WPF-UI" Version="2.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
+    <PackageReference Include="coverlet.collector" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GeKtvi.Toolkit\GeKtvi.Toolkit.csproj" />
+    <ProjectReference Include="..\GeKtvi.Toolkit.Wpf\GeKtvi.Toolkit.Wpf.csproj" />
   </ItemGroup>
 
 </Project>
