--- a/GeKtvi.Toolkit.AvaloniaKit.Tests/GeKtvi.Toolkit.AvaloniaKit.Tests.csproj
+++ b/GeKtvi.Toolkit.AvaloniaKit.Tests/GeKtvi.Toolkit.AvaloniaKit.Tests.csproj
@@ -17,7 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.0.4" />
+    <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Avalonia.Desktop" Version="$(AvaloniaVersion)" />
   </ItemGroup>
 
   <ItemGroup>
