--- a/GeKtvi.Toolkit.AvaloniaKit/GeKtvi.Toolkit.AvaloniaKit.csproj
+++ b/GeKtvi.Toolkit.AvaloniaKit/GeKtvi.Toolkit.AvaloniaKit.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.0.4" />
+    <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
   </ItemGroup>
 
   <ItemGroup>
