--- a/GeKtvi.Toolkit.WpfKit/GeKtvi.Toolkit.WpfKit.csproj
+++ b/GeKtvi.Toolkit.WpfKit/GeKtvi.Toolkit.WpfKit.csproj
@@ -9,7 +9,7 @@
     <Version>0.0.7</Version>
     <Title>GeKtvi.Toolkit.Wpf</Title>
     <Description>Extended WPF controls and some reuse classes</Description>
-    <RepositoryUrl>https://github.com/GeKtvi/GeKtviWpfToolkit</RepositoryUrl>
+    <RepositoryUrl>https://github.com/GeKtvi/GeKtvi.Toolkit</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
