Reworking from events to rx

--- a/GeKtvi.Toolkit.Win32Kit/GeKtvi.Toolkit.Win32Kit.csproj
+++ b/GeKtvi.Toolkit.Win32Kit/GeKtvi.Toolkit.Win32Kit.csproj
@@ -1,9 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.0-windows</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>1.0.1</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Reactive" Version="6.0.1" />
+  </ItemGroup>
   
 </Project>
