--- a/GeKtvi.Toolkit.AvaloniaKit.Tests.App/GeKtvi.Toolkit.AvaloniaKit.Tests.App.csproj
+++ b/GeKtvi.Toolkit.AvaloniaKit.Tests.App/GeKtvi.Toolkit.AvaloniaKit.Tests.App.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
@@ -28,10 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Configs\OtherSomeFile.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Configs\SomeFile.config">
+    <None Update="Configs\*.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
