--- a/GeKtvi.Toolkit.AvaloniaKit/GeKtvi.Toolkit.AvaloniaKit.csproj
+++ b/GeKtvi.Toolkit.AvaloniaKit/GeKtvi.Toolkit.AvaloniaKit.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="System.Reactive" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
