--- a/GeKtvi.Toolkit.Wcf.Core/GeKtvi.Toolkit.Wcf.Core.csproj
+++ b/GeKtvi.Toolkit.Wcf.Core/GeKtvi.Toolkit.Wcf.Core.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+	  <TargetFrameworks>netstandard2.0;net6.0;net48</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Reactive" Version="6.0.0" />
+	  <PackageReference Include="System.Reactive" Version="6.0.0"/>
   </ItemGroup>
 </Project>
