--- a/GeKtvi.Toolkit.Wcf.Client/GeKtvi.Toolkit.Wcf.Client.csproj
+++ b/GeKtvi.Toolkit.Wcf.Client/GeKtvi.Toolkit.Wcf.Client.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0-windows</TargetFramework>
+		<TargetFrameworks>net8.0;net472</TargetFrameworks>
 		<TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);IncludeProjectReferenceDlls</TargetsForTfmSpecificBuildOutput>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="System.Reactive" Version="6.0.0" />
-		<PackageReference Include="System.ServiceModel.NetNamedPipe" Version="6.2.0" />
+		<PackageReference Condition="'$(TargetFramework)' == 'net8.0'" Include="System.ServiceModel.NetNamedPipe" Version="6.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -16,9 +16,15 @@
 		</ProjectReference>
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+	  <Reference Include="System.ServiceModel">
+	    <HintPath>..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.8\System.ServiceModel.dll</HintPath>
+	  </Reference>
+	</ItemGroup>
+
 	<Target Name="IncludeProjectReferenceDlls" DependsOnTargets="BuildOnlySettings;ResolveReferences">
 		<ItemGroup>
-			<BuildOutputInPackage Include="@(ReferenceCopyLocalPaths->WithMetadataValue('ReferenceSourceTarget', 'ProjectReference')->WithMetadataValue('PrivateAssets', 'All'))"/>
+			<BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference')-&gt;WithMetadataValue('PrivateAssets', 'All'))" />
 		</ItemGroup>
 	</Target>
 </Project>
