Add net framework support in WpfKit

--- a/GeKtvi.Toolkit.WpfKit/GeKtvi.Toolkit.WpfKit.csproj
+++ b/GeKtvi.Toolkit.WpfKit/GeKtvi.Toolkit.WpfKit.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>library</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFrameworks>net481;net6.0-windows</TargetFrameworks>
     <Nullable>disable</Nullable>
     <UseWPF>true</UseWPF>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="System.Reactive" Version="6.0.0" />
     <PackageReference Include="WPF-UI" Version="2.1.0" />
   </ItemGroup>
