--- a/GeKtvi.Toolkit.WpfKit.Tests/GeKtvi.Toolkit.WpfKit.Tests.csproj
+++ b/GeKtvi.Toolkit.WpfKit.Tests/GeKtvi.Toolkit.WpfKit.Tests.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+	<UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
