--- a/GeKtvi.Toolkit/GeKtvi.Toolkit.csproj
+++ b/GeKtvi.Toolkit/GeKtvi.Toolkit.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="IsExternalInit" Version="1.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Reactive" Version="6.0.0" />
   </ItemGroup>
 </Project>
