--- a/GeKtvi.Toolkit/GeKtvi.Toolkit.csproj
+++ b/GeKtvi.Toolkit/GeKtvi.Toolkit.csproj
@@ -15,5 +15,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="System.Reactive" Version="6.0.0" />
+    <PackageReference Include="System.Text.Json" Version="9.0.2" />
   </ItemGroup>
 </Project>
